--- a/src/app/page/Mobile/drivercheckinpage/drivercheckinpage.component.html
+++ b/src/app/page/Mobile/drivercheckinpage/drivercheckinpage.component.html
@@ -1,7 +1,6 @@
 <!-- https://getbootstrap.com/docs/5.0/utilities/text/ -->
 <!-- background -->
-<div class="col-lg-12 col-12"
-    style="background-color: #2c56cb; color:#2c56cb; height:20vh; position:absolute;z-index:0;"></div>
+<div class="col-lg-12 col-12" style="background-color: #2c56cb; color:#2c56cb; height:20vh; position:absolute;z-index:0;"></div>
 
 <!-- forground -->
 <div class="col-lg-12" style="position:absolute; z-index:1;">
@@ -24,110 +23,99 @@
 
         <!-- driver vehicle -->
         <div class="col-lg-12 col-12 m-0 p-0 row no-gutters">
-            <div class="col-lg-9 col-9 d-flex justify-content-start align-items-center">
-                <div class="d-flex flex-column ">
+            <div class="col-lg-9 col-9 d-flex justify-content-start align-items-center mt-3">
+                <div class="d-flex flex-column mx-3">
                     <span class="fw-bolder fs-3 mb-1">ชื่อผู้ขับรถ</span>
                     <span class="fw-bolder fs-6 fw-lighter" style="color: lightslategray;">ทะเบียนรถ, จังหวัด</span>
                 </div>
             </div>
             <div class="col-lg-3 col-3 no-gutters d-flex justify-content-end align-items-start">
-                <mat-icon class="icon-normal"
-                    style="width:40px;height:40px;font-size:xx-large;color:#b4b6bc;">directions_bus</mat-icon>
+                <mat-icon class="icon-normal mt-2"
+                    style="width:40px;height:40px;font-size:xx-large;color:#00b418;">directions_bus</mat-icon>
             </div>
         </div>
 
         <!-- route -->
         <div class="col-lg-12 col-12 m-0 p-0 mt-4 row no-gutters">
-            <div class="col-lg-6 col-6 d-flex justify-content-start align-items-center">
-                <div class="d-flex flex-column">
-                    <span class="fw-bold fs-6 mb-1">เส้นทาง</span>
-                    <span class="fw-bold fs-6 fw-lighter text-truncate" style="max-width: 200px;">ชื่อเส้นทาง
-                        เดินรถ.........................................................................</span>
-                </div>
-            </div>
-            <div class="col-lg-6 col-6 no-gutters d-flex justify-content-end align-items-center">
+            <div class="col-lg-6 col-6 d-flex justify-content-start align-items-center mx-3">
                 <span class="fw-bold fs-2">07:00</span>
                 <mat-icon class="icon-normal"
                     style="width:34px;height:34px;font-size:xx-large;color:#b4b6bc;">compare_arrows</mat-icon>
                 <span class="fw-bold fs-2">11:00</span>
             </div>
+
+            <div class="col-lg-4 col-4 no-gutters d-flex justify-content-end align-items-end">
+                <div class="d-flex flex-column">
+                    <span class="fw-bold fs-6 mb-1">เส้นทาง</span>
+                    <span class="fw-bold fs-6 fw-lighter text-truncate" style="max-width: 100px;">เดินรถ.........................................................................</span>
+                </div>
+            </div>
         </div>
 
-
         <!-- passenger -->
-        <div class="col-lg-12 col-12 m-0 p-0 mt-5 row no-gutters">
+        <div class="col-lg-12 col-12 m-0 p-0 mt-4 mb-2 row no-gutters">
             <div class="col-lg-9 col-9 d-flex justify-content-start align-items-center">
-                <div class="d-flex flex-column ">
+                <div class="d-flex flex-column mx-3">
                     <span class="fw-bolder fs-3 mb-1">บริษัท</span>
                     <span class="fw-bolder fs-6 fw-lighter">รับ-ส่ง : 0 คน</span>
                 </div>
             </div>
-            <div class="col-lg-3 col-3 no-gutters d-flex justify-content-end align-items-end">
-                <mat-icon class="icon-normal"
-                    style="width:40px;height:30px;font-size:xx-large;color:#2a48a4;">local_shipping</mat-icon>
+            <div class="col-lg-3 col-3 no-gutters d-flex justify-content-end align-items-center">
+                <mat-icon class="icon-normal" style="width:40px;height:30px;font-size:xx-large;color:#2a48a4;">local_shipping</mat-icon>
             </div>
         </div>
 
     </div>
 
-    <div class="row no-gutter d-flex justify-content-center">
-        <div class="col-10">
-
-            <!-- Check Item -->
-            <div class="row no-gutter">
-                <div class="col-6">
-                    <mat-form-field class="example-full-width d-flex align-content-center">
-                        <mat-icon class="fs-4">alarm</mat-icon>
-                         <span> 00:00 </span>
-                    </mat-form-field>
-                </div>
-                <div class="col-6">
-                    <mat-form-field class="example-full-width">
-                        <mat-icon class="icon-pass">record_voice_over</mat-icon>
-                        <span class="label-time"> 00:00 (0 %) </span>
-                    </mat-form-field>
-                </div>
+    <!-- Check Item -->
+    <div class="row no-gutter my-5 d-flex justify-content-center">
+        <div class="col-6 d-flex justify-content-center align-content-center">
+            <div class="col-9 d-flex flex-column justify-content-center align-content-center p-3 icon-nomal">
+                <div class="d-flex justify-content-center"><mat-icon class="fs-4">alarm</mat-icon></div>
+                <div class="d-flex justify-content-center"><span> 00:00 </span> </div>
             </div>
+        </div>
 
-            <!-- Check Item -->
-            <div class="row no-gutter">
-                <div class="col-6">
-                    <mat-form-field class="example-full-width">
-                        <mat-icon class="icon-nonpass">hot_tub</mat-icon>
-                        <span class="label-time">00:00 (0 °C)</span>
-                    </mat-form-field>
-                </div>
-                <div class="col-6">
-                    <mat-form-field class="example-full-width">
-                        <mat-icon class="icon-normal">power_settings_new</mat-icon>
-                        <span class="label-time">00:00</span>
-                    </mat-form-field>
-                </div>
+        <div class="col-6 d-flex justify-content-center align-content-center">
+            <div class="col-9 d-flex flex-column justify-content-center align-content-center p-3 icon-pass">
+                <div class="d-flex justify-content-center"><mat-icon class="fs-4">record_voice_over</mat-icon></div>
+                <div class="d-flex justify-content-center"><span>00:00 (0 %)</span> </div>
             </div>
-
-            <div class="row no-gutter">
-                <mat-form-field class="example-full-width">
-                </mat-form-field>
+        </div>
+    </div>
+    <div class="row no-gutter my-5 d-flex justify-content-center">
+        <div class="col-6 d-flex justify-content-center align-content-center">
+            <div class="col-9 d-flex flex-column justify-content-center align-content-center p-3 icon-nomal">
+                <div class="d-flex justify-content-center"><mat-icon class="fs-4">hot_tub</mat-icon></div>
+                <div class="d-flex justify-content-center"><span> 00:00 (p-0)</span> </div>
             </div>
+        </div>
 
-            <!-- btn Check in  -->
-            <div class="row no-gutter justify-content-center">
-                <div class="col-4">
-                    <button mat-raised-button color="accent" (click)="open_Cancelmodule(modalcancelwork)">
-                        <mat-icon style="margin-right: 5px;">delete_forever</mat-icon> ลางาน
-                    </button>
-                </div>
-                <div class="col-4">
-                    <button mat-raised-button color="primary" (click)="onCheckin_Click()">
-                        <mat-icon style="margin-right: 5px;">check_circle</mat-icon>เริ่มงาน
-                    </button>
-                </div>
+        <div class="col-6 d-flex justify-content-center align-content-center">
+            <div class="col-9 d-flex flex-column justify-content-center align-content-center p-3 icon-nonpass">
+                <div class="d-flex justify-content-center"><mat-icon class="fs-4">power_settings_new</mat-icon></div>
+                <div class="d-flex justify-content-center"><span>00:00</span> </div>
             </div>
-
         </div>
     </div>
 </div>
 
+
+<!-- btn Check in  -->
+<div class="col-lg-12 col-12" style="background-color:white; height:10vh; position:absolute;z-index:0; bottom:0;border-radius: 15px 15px 0px 0px;">
+    <div class="row no-gutter d-flex justify-content-center mt-4 px-3">
+        <div class="col-6 d-flex justify-content-center align-content-center">
+            <button class="col-12" mat-raised-button color="accent" (click)="open_Cancelmodule(modalcancelwork)">
+              <mat-icon style="margin-right: 5px;">delete_forever</mat-icon> ลางาน 
+            </button>
+        </div>
+        <div class="col-6 d-flex justify-content-center align-content-center">
+            <button class="col-12" mat-raised-button color="primary" (click)="onCheckin_Click()">
+                <mat-icon style="margin-right: 5px;">check_circle</mat-icon>เริ่มงาน
+            </button>
+        </div>
+    </div>
+</div>
 
 
 <!-- popup -->
@@ -135,21 +123,11 @@
     <div class="modal-header">
         <b>ไม่สามารถปฎิบัติงานได้</b>
         <button type="button" class="btn-close" aria-label="Close" (click)="modal.close()"></button>
-
     </div>
-    <div class="modal-body m-4">
-
-        <div class="row no-gutters align-items-center mb-4">
-            <span>ไม่สามารถปฎิบัติงานได้ เนื่องจาก</span>
-        </div>
+    <div class="modal-body ">
         <div class="row no-gutters align-items-center mb-3">
-            <div class="col-4 txtright">
-                <b>หัวข้อในการลา : </b>
-            </div>
-            <div class="col-8">
-                <!-- <select class="form-control mt-1" [(ngModel)]="viewData.depid">
-                    <option [value]="i.id" *ngFor="let i of deptData">{{i.rolecode}} | {{i.rolename}}</option>
-                </select> -->
+            <div class="col-12 txtright"> <b>หัวข้อในการลา</b> </div>
+            <div class="col-12">
                 <select class="form-control mt-1">
                     <option value="0"> ป่วย </option>
                     <option value="1"> รถเสีย </option>
@@ -159,12 +137,16 @@
             </div>
         </div>
         <div class="row no-gutters align-items-top mb-4">
-            <div class="col-4 txtright">
-                <b>อธิบายเหตุผล : </b>
-            </div>
-            <div class="col-8 txtright">
-                <textarea class="full-width" (keyup)="autoGrowText($event)"></textarea>
+            <div class="col-12 txtright"><b>อธิบายเหตุผล</b></div>
+            <div class="col-12 txtright">
+                <textarea class="col-12" (keyup)="autoGrowText($event)"></textarea>
             </div>
         </div>
+    </div>
+
+    <div class="modal-body ">
+        <button class="col-12 m-2" mat-raised-button color="primary" (click)="onCheckin_Click()">
+            <mat-icon>check_circle</mat-icon>เริ่มงาน
+        </button>
     </div>
 </ng-template>
