--- a/src/app/page/Driver/driverpage/driverpage.component.html
+++ b/src/app/page/Driver/driverpage/driverpage.component.html
@@ -1,1 +1,43 @@
-<p>driverpage works!</p>
+<div class="modal-header">
+  <!-- <b>Department {{viewData.deptname}}</b> -->
+  <button type="button" class="btn-close" aria-label="Close" (click)="modal.close()"></button>
+</div>
+
+
+
+<mat-card class="example-card" appearance="outlined">
+  <mat-card-header>
+
+    <div class="col-3">
+      <img  class="driverimg" [src]="viewData.lineimage==''?'assets/images/user-ic.png':viewData.lineimage">
+    </div>
+    <div class="col-6">
+      <mat-card-title>{{viewData.driverfullname}}</mat-card-title>
+      <mat-card-subtitle>{{viewData.linename}}</mat-card-subtitle>
+    </div>
+    <div class="col-3">
+      <qrcode [qrdata]="Qrdata" [allowEmptyString]="true" [width]="100"></qrcode>
+    </div>
+
+   
+  </mat-card-header>
+
+  <mat-card-content>
+    <p>
+      {{viewData.driverfullname}} 
+      {{viewData.drivername}} 
+      {{viewData.surname}} 
+      {{viewData.nickname}} 
+      {{viewData.license}} 
+      {{viewData.licensetype}} 
+      {{viewData.phone}} 
+      {{viewData.mobile}} 
+      {{viewData.linename}} 
+      <!-- {{viewData.lineimage}}  -->
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
