--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,13 @@
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item">register </span>
         </div>
-        <div *ngIf="true" (click)="openPage('driverdashboard')"  class="clickable-div">
+        <div *ngIf="false" (click)="openPage('driverdashboard')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> driverdashboard </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('wakeupdashboard')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> WakeUp dashboard </span>
         </div>
         <div *ngIf="true" (click)="openPage('driver')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
