--- a/src/app/page/wakeupdashboard/wakeupdashboard.component.html
+++ b/src/app/page/wakeupdashboard/wakeupdashboard.component.html
@@ -1,123 +1,197 @@
-<div class="container">
-    <!-- Search Filler -->
-    <div class="row mt-4">
-        <div class="col-lg-8 col-sm-12">
-            <div class="col-lg-12 col-sm-12 p-1" style="font-size: large; color: black; font-weight: 550;">
-                <div class="row align-items-center" style="gap:10px;">
-                    <div class="col-auto p-0">
-                        <mat-icon style="margin-left:10px; font-size: 24px;">dashboard</mat-icon>
-                    </div>
-                    <div class="col p-0">
-                        <span style="display: inline-block;">Wake Up Dashboard</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!-- spinner -->
+<div class="container-spiner" *ngIf="show.Spinner">
+    <div class="row"> Please Watting... </div>
+    <mat-spinner></mat-spinner>
+</div>
 
-        <div class="col-lg-4 col-sm-12">
-            <div class="row">
-                <div class="col-9">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search" aria-label="Search"
-                            aria-describedby="button-addon">
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon"
-                            style="display: flex;align-items: center;border-color:#ced4da;">
-                            <mat-icon>search</mat-icon>
-                        </button>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
+<div class="position-absolute d-flex justify-content-center align-items-center" style="margin-top:6%; height: 75vh; width: 90%; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    <!-- Background -->
+    <div class="img-background" style="width: 100%;height: auto;">
+        <img src="../../../assets/images/registerlogo.png" class="img-fluid" style="width: 100%;height: auto;">
     </div>
 
-    <!-- Company & Driver Wakeup -->
-    <div class="row mt-5">
-
-        <div class="row" *ngFor="let comp of activedashboad">
-
-            <div class="col-1 no-gutters zeroxy d-flex justify-content-center align-items-start p-0"
-                matBadge={{comp.totaldo}} matBadgePosition="after">
-                <img [src]="'../../../assets/images/logocomp/company B.jpg'" style=" max-width:100%;">
+    <!-- Body -->
+    <div style="position: absolute;top: 0;left: 0;z-index: 1;">
+        <!-- Company List-->
+        <div *ngFor="let comp of activedashboad">
+            <!-- Company Name-->
+            <div class="row no-gutter" style="display: flex; width:100%; margin: 5PX;">
+                <div class="col-10 justify-content-center">
+                    <h4>{{comp.company}}</h4>
+                </div>
+                <div class="col-2">
+                    <button mat-icon-button (click)="ShowDriverlistClick(comp)">
+                        <mat-icon>{{comp.showicon}}</mat-icon>
+                    </button>
+                </div>
             </div>
 
-            <div class="col-11 no-gutters zeroxy p-0 ps-1 ishadow">
-                <div class="row ps-4 pt-3">
-                    <div class="col-2 d-flex align-items-center">
-                        <mat-icon>wb_sunny</mat-icon>
-                        <span matBadge={{comp.totalwake}} matBadgeColor="primary" class="ps-1 pe-3">ตื่นแล้ว</span>
-                    </div>
-                    <div class="col-10" *ngFor="let driver of comp.driverlist">
-                        <div *ngIf="driver.wakestatus">
-                            <div class="col-auto fw-bold" style="font-size:12px;">{{driver.fullname}}</div>
-                            <!-- <img class="profileimg me-2" src="../../../assets/images/user.png" style="margin-top:-10px;" [matMenuTriggerFor]="wake"> -->
-                            <!--POPUP ! Driver Data Wakeup -->
-                            <mat-menu #wake="matMenu" style="width:100%;">
-                                <div class="row px-3">
-                                    <mat-icon class="me-1 col-auto fs-5"
-                                        style="width:40px; color:#468fad">person</mat-icon>
-                                    <div class="col-auto fw-bold" style="font-size:12px;">นาย อุเทน จุ้ยประโคน</div>
-                                    <mat-icon class="me-2 col-auto fs-5"
-                                        style="width:10px; color:gray">more_vert</mat-icon>
-                                </div>
-                                <div class="row px-3"><mat-icon class="me-1 col-auto fs-5"
-                                        style="width:40px; color:#468fad">local_phone</mat-icon>
-                                    <div class="col-auto" style="font-size:12px;">0618138257</div>
-                                </div>
-                                <div class="row px-3"><mat-icon class="me-1 col-auto fs-5"
-                                        style="width:40px; color:#468fad">drive_eta</mat-icon>
-                                    <div class="col-auto" style="font-size:12px;">NDK-01 30-4129 ชลบุรี</div>
-                                </div>
-                            </mat-menu>
+            <!-- Company Icon -->
+            <div class="row no-gutter" style="display: flex; width:100%; margin: 5PX;">
+                <!-- Company Logo-->
+                <div class="col-3">
+                    <img [src]="comp.complogo==''? va.iconnologo : comp.complogo" class="companyimg">
+                </div>
+                <!-- Company Data-->
+                <div class="col-9 justify-content-center">
+                    <!-- Company Event-->
+                    <div class="row no-gutter">
+                        <div class="col-4 justify-content-center">
+                            <div class="row">
+                                <mat-icon style="width: 100%; color: blue;">local_shipping</mat-icon>
+                            </div>
+                            <div class="row">
+                                <span>{{comp.totaldo}}</span>
+                            </div>
+
                         </div>
-                    </div>
-                </div>
-
-                <div class="row p-0 my-2 d-flex align-items-center">
-                </div>
-
-                <div class="row ps-4">
-                    <div class="col-2 d-flex align-items-center">
-                        <mat-icon>hotel</mat-icon>
-                        <span matBadge={{comp.totaldo-comp.totalwake}} matBadgeColor="warn"
-                            class="ps-1 pe-3">ยังไม่ตื่น</span>
-                    </div>
-                    <div class="col-10" *ngFor="let driver of comp.driverlist">
-                        <div *ngIf="!driver.wakestatus">
-                            <div class="col-auto fw-bold" style="font-size:12px;">{{driver.fullname}}</div>
-                            <!-- <img class="profileimg me-2" src="../../../assets/images/user.png"
-                                style="margin:0px 0px 10px 0px; filter: sepia(1) saturate(5) hue-rotate(-50deg);"
-                                [matMenuTriggerFor]="sleep"> -->
-                            <!--POPUP ! Driver Data None Wakeup -->
-                            <mat-menu #sleep="matMenu">
-                                <div class="row px-3">
-                                    <mat-icon class="me-1 col-auto fs-5"
-                                        style="width:40px; color:#ff747f">person</mat-icon>
-                                    <div class="col-auto fw-bold" style="font-size:12px;">นาย อุเทน จุ้ยประโคน</div>
-                                    <div class="col-auto me-1 mb-2 d-flex align-items-center"
-                                        style="color:#008cff; font-size:15px;"><mat-icon class="fs-5"
-                                            style="margin-top:6px; width:10px;">wb_sunny</mat-icon> ปลุก</div>
-                                </div>
-                                <div class="row px-3"><mat-icon class="me-1 col-auto fs-5"
-                                        style="width:40px; color:#ff747f">local_phone</mat-icon>
-                                    <div class="col-auto" style="font-size:12px;">0618138257</div>
-                                </div>
-                                <div class="row px-3"><mat-icon class="me-1 col-auto fs-5"
-                                        style="width:40px; color:#ff747f">drive_eta</mat-icon>
-                                    <div class="col-auto" style="font-size:12px;">NDK-01 30-4129 ชลบุรี</div>
-                                </div>
-                            </mat-menu>
-
-
+                        <div class="col-4 justify-content-center">
+                            <div class="row">
+                                <mat-icon style="width: 100%; color: green;">check_circle</mat-icon>
+                            </div>
+                            <div class="row">
+                                <span>{{comp.totalwake}}</span>
+                            </div>
+                        </div>
+                        <div class="col-4 justify-content-center">
+                            <div class="row">
+                                <mat-icon style="width: 100%; color: red;">cancel</mat-icon>
+                            </div>
+                            <div class="row">
+                                <span>{{comp.totaldo-comp.totalwake}}</span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
+            <!--Company Details (Driver List)  -->
+            <div class="row no-gutter " style="display: flex; width:100%; margin: 5PX;" *ngIf="comp.showdetail">
+                <div class="col-2 justify-content-center" style="align-items: center;">
+                    <mat-icon style="width: 100%; color: green;">check_circle</mat-icon>
+                </div>
+                <div class="col-10 justify-content-center">
+                    <div class="row">
+                        <div class="col-2" *ngFor="let driver of comp.wakeuplist">
+                            <div>
+                                <img [src]="driver.lineimage ==''? va.iconuser : driver.lineimage" class="driverimg"
+                                    (click)="showdiverwork(driver)">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row no-gutter" style="display: flex; width:100%; margin: 5PX;" *ngIf="comp.showdetail">
+                <div class="col-2 justify-content-center" style="height: auto;">
+                    <mat-icon style="width: 100%; color: red;">cancel</mat-icon>
+                </div>
+                <div class="col-10 justify-content-center">
+                    <div class="row">
+                        <div class="col-2" *ngFor="let driver of comp.unwakeuplist">
+                            <div>
+                                <img [src]="driver.lineimage ==''? va.iconuser : driver.lineimage" class="driverimg"
+                                (click)="showdiverwork(driver)">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div style="width:100%;height:2px; background-color: lightgrey; margin: 5px"></div>
+
+        </div>
     </div>
 
+    <!-- driver details -->
+    <div class="div-foreground d-flex align-items-center" *ngIf="show.Driverwork">
+        <div>
+            <!-- Line Data -->
+            <div class="container" style="margin: 5px;flex-flow:column wrap">
+                <div class="row no-gutter d-flex align-items-center" >
+                    <img [src]="activedriver.lineimage==''? va.iconuser : activedriver.lineimage" class="profileimg">
+                </div>
+                <div class="row no-gutter d-flex align-items-center">
+                    <b style="text-align: center ">{{ activedriver.linename }}</b>
+                </div>
+                <div class="row no-gutter d-flex align-items-center" style="font-size:small;">
+                    {{activedriver.doname}}
+                </div>
 
+            </div>
+
+            <!-- Route Data -->
+            <div>
+                <!-- fullname -->
+                <div class="row px-3">
+                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">person</mat-icon>
+                    <div class="col-auto fw-bold" style="font-size:12px;">{{activedriver.fullname}}</div>
+                </div>
+
+                <!-- phone -->
+                <div class="row px-3">
+                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">local_phone</mat-icon>
+                    <div class="col-auto" style="font-size:12px;"> {{activedriver.phone}} </div>
+                </div>
+
+                <!-- Vehicle -->
+                <div class="row px-3">
+                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">drive_eta</mat-icon>
+                    <div class="col-auto" style="font-size:12px;">
+                        {{activedriver.vname}} : {{activedriver.vlicent}}
+                    </div>
+                </div>
+
+                <!-- companyname -->
+                <div class="row px-3">
+                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">drive_eta</mat-icon>
+                    <div class="col-auto" style="font-size:12px; overflow-y: hidden; ">
+                        {{activedriver.companyname}}
+                    </div>
+                </div>
+
+                <!-- shift -->
+                <div class="row px-3">
+                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">drive_eta</mat-icon>
+                    <div class="col-auto" style="font-size:12px; overflow-y: hidden; ">
+                        {{activedriver.isendname}} &nbsp; {{activedriver.shift}} &nbsp; {{activedriver.otname}}
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- event log -->
+            <br /><br />
+            <div class="row px-3" style="height:2px; background-color: lightgray;"></div>
+            <div class="row px-3">
+                <h4> Activity Log</h4>
+            </div>
+            <div class="row px-3" style="height:2px; background-color: lightgray;"></div>
+            <div *ngFor="let event of activedriver.activitylog">
+                <div class="row px-3">
+                    <mat-icon class="me-1 col-auto fs-5" style="width:40px;"
+                        [color]="event.transtatus==0?'#07f520':'#f5071d'">{{event.icon}}</mat-icon>
+                    <div class="col-auto fw-bold" style="font-size:small;">
+                        {{event.statusname}} : {{event.statustaget| date:'HH:mm'}}
+                    </div>
+
+                    <div class="col-auto fw-bold" style="font-size:small;" *ngIf="event.transtatus==1">
+                        <span>{{event.statustime | date:'HH:mm'}}</span>
+                        <span *ngIf="event.statusid==10">({{event.statuslevel}})</span>
+                    </div>
+                    <div class="col-auto fw-bold" >
+                         <mat-icon *ngIf="event.transtatus==0"class="me-1 col-auto fs-5" style="width:40px;color:green;" (click)="updatestatus(activedriver,event,1)">send</mat-icon>
+                         <mat-icon *ngIf="event.transtatus==1" class="me-1 col-auto fs-5" style="width:40px;color:red" (click)="updatestatus(activedriver,event,0)" >undo</mat-icon>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- close button -->
+            <div style="margin: 20px;">
+                <button (click)="show.Driverwork=false">Close</button>
+            </div>
+        </div>
+    </div>
 
 </div>
