--- a/src/app/page/wakeupdashboard/wakeupdashboard.component.html
+++ b/src/app/page/wakeupdashboard/wakeupdashboard.component.html
@@ -4,7 +4,8 @@
     <mat-spinner></mat-spinner>
 </div>
 
-<div class="position-absolute d-flex justify-content-center align-items-center" style="margin-top:6%; height: 75vh; width: 90%; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+<div class="position-absolute d-flex justify-content-center align-items-center"
+    style="margin-top:6%; height: 75vh; width: 90%; top: 50%; left: 50%; transform: translate(-50%, -50%);">
     <!-- Background -->
     <div class="img-background" style="width: 100%;height: auto;">
         <img src="../../../assets/images/registerlogo.png" class="img-fluid" style="width: 100%;height: auto;">
@@ -73,9 +74,12 @@
                 <div class="col-10 justify-content-center">
                     <div class="row">
                         <div class="col-2" *ngFor="let driver of comp.wakeuplist">
-                            <div>
+                            <div class="d-flex justify-content-center">
                                 <img [src]="driver.lineimage ==''? va.iconuser : driver.lineimage" class="driverimg"
                                     (click)="showdiverwork(driver)">
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                {{driver.driverid}}
                             </div>
                         </div>
                     </div>
@@ -89,9 +93,12 @@
                 <div class="col-10 justify-content-center">
                     <div class="row">
                         <div class="col-2" *ngFor="let driver of comp.unwakeuplist">
-                            <div>
+                            <div class="d-flex justify-content-center">
                                 <img [src]="driver.lineimage ==''? va.iconuser : driver.lineimage" class="driverimg"
-                                (click)="showdiverwork(driver)">
+                                    (click)="showdiverwork(driver)">
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                {{driver.driverid}}
                             </div>
                         </div>
                     </div>
@@ -108,7 +115,7 @@
         <div>
             <!-- Line Data -->
             <div class="container" style="margin: 5px;flex-flow:column wrap">
-                <div class="row no-gutter d-flex align-items-center" >
+                <div class="row no-gutter d-flex align-items-center">
                     <img [src]="activedriver.lineimage==''? va.iconuser : activedriver.lineimage" class="profileimg">
                 </div>
                 <div class="row no-gutter d-flex align-items-center">
@@ -179,9 +186,11 @@
                         <span>{{event.statustime | date:'HH:mm'}}</span>
                         <span *ngIf="event.statusid==10">({{event.statuslevel}})</span>
                     </div>
-                    <div class="col-auto fw-bold" >
-                         <mat-icon *ngIf="event.transtatus==0"class="me-1 col-auto fs-5" style="width:40px;color:green;" (click)="updatestatus(activedriver,event,1)">send</mat-icon>
-                         <mat-icon *ngIf="event.transtatus==1" class="me-1 col-auto fs-5" style="width:40px;color:red" (click)="updatestatus(activedriver,event,0)" >undo</mat-icon>
+                    <div class="col-auto fw-bold">
+                        <mat-icon *ngIf="event.transtatus==0" class="me-1 col-auto fs-5" style="width:40px;color:green;"
+                            (click)="updatestatus(activedriver,event,1)">send</mat-icon>
+                        <mat-icon *ngIf="event.transtatus==1" class="me-1 col-auto fs-5" style="width:40px;color:red"
+                            (click)="updatestatus(activedriver,event,0)">undo</mat-icon>
                     </div>
                 </div>
             </div>
