--- a/src/app/lmap/lmap.component.html
+++ b/src/app/lmap/lmap.component.html
@@ -1,10 +1,14 @@
-<h2>leaflet map {{mousePosition.lat}}, {{mousePosition.lng}},</h2>
-<div id="leafmap" style="height: 90%; width: 90%;" ></div>   
 
-<!-- <img src="../../assets/images/user-ic.png" /> -->
+<!doctype html>
+<html >
+<head>
+  
 
-<!-- <div class="map-container">
-    <div class="map-frame">
-        <div id="leafmap"></div>
+</head>
+<body>
+    <div class="modal-body">
+        <h2>leaflet map {{mousePosition.lat}}, {{mousePosition.lng}},</h2>
+        <div id="leafmap" style="height: 100vh; width: 100hw;"></div>
     </div>
-</div> -->
+</body>
+</html>
