--- a/src/app/page/Dashboard/wakedashboardpage/wakedashboardpage.component.html
+++ b/src/app/page/Dashboard/wakedashboardpage/wakedashboardpage.component.html
@@ -1,5 +1,5 @@
 <!-- spinner -->
-<div class="container-spiner" *ngIf="show.Spinner">
+<div class="container-spiner" >
     <div class="row">
         Please Watting...
     </div>
@@ -16,192 +16,12 @@
     <!-- Body -->
     <div style="position: absolute;top: 0;left: 0;z-index: 1;">
 
-        <!-- Company List-->
-        <div *ngFor="let comp of activedashboad">
-            <!-- Company Name-->
-            <div class="row no-gutter" style="display: flex; width:100%; margin: 5PX;">
-                <div class="col-10 justify-content-center">
-                    <h4>{{comp.company}}</h4>
-                </div>
-                <div class="col-2">
-                    <button mat-icon-button (click)="ShowDriverlistClick(comp)">
-                        <mat-icon>{{comp.showicon}}</mat-icon>
-                    </button>
-                </div>
-            </div>
-
-            <!-- Company Icon -->
-            <div class="row no-gutter" style="display: flex; width:100%; margin: 5PX;">
-                <!-- Company Logo-->
-                <div class="col-3">
-                    <img [src]="comp.complogo==''? va.icon.nologo : comp.complogo" class="companyimg">
-                </div>
-                <!-- Company Data-->
-                <div class="col-9 justify-content-center">
-                    <!-- Company Event-->
-                    <div class="row no-gutter">
-                        <div class="col-4 justify-content-center">
-                            <div class="row">
-                                <mat-icon style="width: 100%; color: blue;">local_shipping</mat-icon>
-                            </div>
-                            <div class="row">
-                                <span>{{comp.totaldo}}</span>
-                            </div>
-
-                        </div>
-                        <div class="col-4 justify-content-center">
-                            <div class="row">
-                                <mat-icon style="width: 100%; color: green;">check_circle</mat-icon>
-                            </div>
-                            <div class="row">
-                                <span>{{comp.totalwake}}</span>
-                            </div>
-                        </div>
-                        <div class="col-4 justify-content-center">
-                            <div class="row">
-                                <mat-icon style="width: 100%; color: red;">cancel</mat-icon>
-                            </div>
-                            <div class="row">
-                                <span>{{comp.totaldo-comp.totalwake}}</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!--Company Details (Driver List)  -->
-            <div class="row no-gutter " style="display: flex; width:100%; margin: 5PX;" *ngIf="comp.showdetail">
-                <div class="col-2 justify-content-center" style="align-items: center;">
-                    <mat-icon style="width: 100%; color: green;">check_circle</mat-icon>
-                </div>
-                <div class="col-10 justify-content-center">
-                    <div class="row">
-                        <div class="col-auto" *ngFor="let driver of comp.wakeuplist">
-                            <div class="row">
-                                <div class="col-2">
-                                    <div class="d-flex justify-content-center">
-                                        <img [src]="driver.lineimage ==''? va.icon.user : driver.lineimage"
-                                            class="driverimg" (click)="showdiverwork(driver)">
-                                    </div>
-                                    <div class="d-flex justify-content-center">
-                                        {{driver.driverid}}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row no-gutter" style="display: flex; width:100%; margin: 5PX;" *ngIf="comp.showdetail">
-                <div class="col-2 justify-content-center" style="height: auto;">
-                    <mat-icon style="width: 100%; color: red;">cancel</mat-icon>
-                </div>
-                <div class="col-10 justify-content-center">
-                    <div class="row">
-                        <div class="col-2" *ngFor="let driver of comp.unwakeuplist">
-                            <div class="d-flex justify-content-center">
-                                <img [src]="driver.lineimage ==''? va.icon.user : driver.lineimage" class="driverimg"
-                                    (click)="showdiverwork(driver)">
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                {{driver.driverid}}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div style="width:100%;height:2px; background-color: lightgrey; margin: 5px"></div>
-
-        </div>
+       
     </div>
 
     <!-- driver details -->
-    <div class="div-foreground d-flex align-items-center" *ngIf="show.Driverwork">
-        <div>
-            <!-- Line Data -->
-            <div class="container" style="margin: 5px;flex-flow:column wrap">
-                <div class="row no-gutter d-flex align-items-center">
-                    <img [src]="activedriver.lineimage==''? va.icon.user : activedriver.lineimage" class="profileimg">
-                </div>
-                <div class="row no-gutter d-flex align-items-center">
-                    <b style="text-align: center ">{{ activedriver.linename }}</b>
-                </div>
-                <div class="row no-gutter d-flex align-items-center" style="font-size:small;">
-                    {{activedriver.doname}}
-                </div>
+    <div class="div-foreground d-flex align-items-center">
 
-            </div>
-
-            <!-- Route Data -->
-            <div>
-                <!-- fullname -->
-                <div class="row px-3">
-                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">person</mat-icon>
-                    <div class="col-auto fw-bold" style="font-size:12px;">{{activedriver.fullname}}</div>
-                </div>
-
-                <!-- phone -->
-                <div class="row px-3">
-                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">local_phone</mat-icon>
-                    <div class="col-auto" style="font-size:12px;"> {{activedriver.phone}} </div>
-                </div>
-
-                <!-- Vehicle -->
-                <div class="row px-3">
-                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">drive_eta</mat-icon>
-                    <div class="col-auto" style="font-size:12px;">
-                        {{activedriver.vname}} : {{activedriver.vlicent}}
-                    </div>
-                </div>
-
-                <!-- companyname -->
-                <div class="row px-3">
-                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">drive_eta</mat-icon>
-                    <div class="col-auto" style="font-size:12px; overflow-y: hidden; ">
-                        {{activedriver.companyname}}
-                    </div>
-                </div>
-
-                <!-- shift -->
-                <div class="row px-3">
-                    <mat-icon class="me-1 col-auto fs-5" style="width:40px; color:#ff747f">drive_eta</mat-icon>
-                    <div class="col-auto" style="font-size:12px; overflow-y: hidden; ">
-                        {{activedriver.isendname}} &nbsp; {{activedriver.shift}} &nbsp; {{activedriver.otname}}
-                    </div>
-                </div>
-
-            </div>
-
-            <!-- event log -->
-            <br /><br />
-            <div class="row px-3" style="height:2px; background-color: lightgray;"></div>
-            <div class="row px-3">
-                <h4> Activity Log</h4>
-            </div>
-            <div class="row px-3" style="height:2px; background-color: lightgray;"></div>
-            <div *ngFor="let event of activedriver.activitylog">
-                <div class="row px-3">
-                    <mat-icon class="me-1 col-auto fs-5" style="width:40px;"
-                        [color]="event.transtatus==0?'#07f520':'#f5071d'">{{event.icon}}</mat-icon>
-                    <div class="col-auto fw-bold" style="font-size:small;">
-                        {{event.statusname}} : {{event.statustaget| date:'HH:mm'}}
-                    </div>
-
-                    <div class="col-auto fw-bold" style="font-size:small;" *ngIf="event.transtatus==1">
-                        <span>{{event.statustime | date:'HH:mm'}}</span>
-                        <span *ngIf="event.statusid==10">({{event.statuslevel}})</span>
-                    </div>
-                </div>
-            </div>
-
-
-            <!-- close button -->
-            <div style="margin: 20px;">
-                <button (click)="show.Driverwork=false">OK</button>
-            </div>
-        </div>
     </div>
 
 </div>
